--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -58,7 +58,7 @@ target_compile_features(trid_common_options INTERFACE cxx_std_14)
 target_compile_definitions(trid_common_options INTERFACE -DN_MAX=${N_MAX})
 target_compile_definitions(trid_common_options INTERFACE -DN_MPI_MAX=${N_MPI_MAX})
 target_include_directories(trid_common_options INTERFACE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-                                                         $<INSTALL_INTERFACE:include>)
+                                                         $<INSTALL_INTERFACE:${PROJECT_NAME}/include>)
 
 find_package(OpenMP REQUIRED)
 if (BUILD_FOR_MPI)
