--- a/scalar/cmake/Config.cmake.in
+++ b/scalar/cmake/Config.cmake.in
@@ -1,8 +1,20 @@
 @PACKAGE_INIT@
 
-include("${CMAKE_CURRENT_LIST_DIR}/tridcpuTarget.cmake")
+set(_supported_components @libtrid_components@)
+
+foreach (_comp  ${_supported_components})
+  include("${CMAKE_CURRENT_LIST_DIR}/${_comp}Target.cmake")
+endforeach ()
+
+foreach(_comp ${libtrid_FIND_COMPONENTS})
+  if (NOT _comp IN_LIST _supported_components)
+    set(libtrid_FOUND False)
+    set(libtrid_NOT_FOUND_MESSAGE "Unsupported component: ${_comp}")
+  endif()
+endforeach()
 
 set(TRIDSOLVER_N_MAX
     @N_MAX@
     CACHE STRING
-    "Maximum length of the internal buffer for storing intermediate c and d vectors of the Thomas algorithm" FORCE)
+          "Maximum length of the internal buffer for storing intermediate c and d vectors of the Thomas algorithm"
+          FORCE)
