--- a/scalar/src/cuda/CMakeLists.txt
+++ b/scalar/src/cuda/CMakeLists.txt
@@ -69,10 +69,6 @@ if (BUILD_FOR_GPU)
     find_package(MPI REQUIRED)
     if (USE_NCCL)
       find_package(NCCL)
-      if (NCCL_FOUND)
-        add_definitions(-DTRID_NCCL)
-        include_directories(SYSTEM ${NCCL_INCLUDE_DIR})
-      endif ()
     endif ()
 
     set(${PROJECT_NAME}_components "${${PROJECT_NAME}_components} tridcuda_mpi")
@@ -95,9 +91,11 @@ if (BUILD_FOR_GPU)
       PRIVATE trid_common_options
       PUBLIC tridcuda trid_global_options MPI::MPI_CXX)
 
-    if (USE_NCCL)
+    if (USE_NCCL AND NCCL_FOUND)
+      target_compile_definitions(tridcuda_mpi PUBLIC -DTRID_NCCL)
+      target_include_directories(tridcuda_mpi PUBLIC ${NCCL_INCLUDE_DIR})
       target_link_libraries(tridcuda_mpi PUBLIC ${NCCL_LIBRARY})
-    endif (USE_NCCL)
+    endif (USE_NCCL AND NCCL_FOUND)
 
     if (USE_PROFILING)
       target_link_libraries(tridcuda_mpi PUBLIC profiling_cuda)
